[package]
name = "extern_attrib"
version = "0.2.0"
authors = ["anderejd <rajder@gmail.com>"]
description = "Rust automatic ABI attribute macro: #[extern_auto]"
repository = "https://github.com/anderejd/extern_attrib"
readme = "README.md"
keywords = ["ffi", "extern", "abi"]
categories = ["development-tools::ffi"]
license = "MIT"

[lib]
proc-macro = true

[dependencies.quote]
version = "0.3"

[dependencies.syn]
version = "0.11"
features = ["full", "parsing", "printing"]
